syntax = "proto3";

package zitadel.policy.v1;

option go_package ="github.com/caos/zitadel/pkg/grpc/idp";

message OrgIAMPolicy {
    zitadel.v1.ObjectDetails details = 1;
    bool user_login_must_be_domain = 2; //TODO: could be name_must_be_domain
    bool is_default = 3;
}

message LabelPolicy {
    zitadel.v1.ObjectDetails details = 1;
    string primary_color = 2;
    string secondary_color = 3;
}

message MailTemplatePolicy {
    zitadel.v1.ObjectDetails details = 1;
    MailTextType mail_text_type = 2;
    string language = 3; //TODO: theoretically an enum like phone prefix
    string title = 4;
    string pre_header = 5;
    string subject = 6;
    string greeting = 7;
    string text = 8;
    string button_text = 9;
}

enum MailTextType {
    MAIL_TEXT_TYPE_UNSPECIFIED = 0;
}

message LoginPolicy {
    zitadel.v1.ObjectDetails details = 1;
    bool allow_username_password = 2;
    bool allow_register = 3;
    bool allow_external_idp = 4;
    bool force_mfa = 5;
    PasswordlessType passwordless_type = 6;
}

message SecondFactor {
    message OTP {}
    message U2F {}

    oneof type {
        OTP otp = 1;
        U2F u2f = 2;
    }
}

enum PasswordlessType {
    PASSWORDLESS_TYPE_NOT_ALLOWED = 0;
    PASSWORDLESS_TYPE_ALLOWED = 1;
    //TODO: PASSWORDLESS_TYPE_WITH_CERT
}

message PasswordComplexityPolicy {
    zitadel.v1.ObjectDetails details = 1;
    uint64 min_length = 2;
    bool has_uppercase = 3;
    bool has_lowercase = 4;
    bool has_number = 5;
    bool has_symbol = 6;
}

message PasswordAgePolicy {
    zitadel.v1.ObjectDetails details = 1;
    uint64 max_age_days = 2;
    uint64 expire_warn_days = 3;
}

message PasswordLockoutPolicy {
    zitadel.v1.ObjectDetails details = 1;
    uint64 max_attempts = 4;
    bool show_lockout_failure = 3;
}